syntax = "proto3";

package account;

service AccountService {
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse);
  // Add more methods as needed
}

message CreateAccountRequest {
  string username = 1;
  string email = 2;
  string password =3;
  // Add more fields as needed
}

message CreateAccountResponse {
  string username = 1;
  string email = 2;

}

message GetAccountRequest {
  int64 accountId = 1;
}

message GetAccountResponse {
  string username = 1;
  string email = 2;
  // Add more fields as needed
}
